# ka-mind

./: .gitignore  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt  setup.py
examples/: test_advanced_cognition.py  test_checkpoint.py  test_code_agent.py  test_compiler.py  test_copyright.py  test_goal_agent.py  test_neocortex.py  test_optimizer.py  test_parallel.py  test_privacy.py  test_reasoning.py  test_teacher.py  test_teacher_and_safety.py  test_time_machine.py  test_universal_language.py  train_chanakya.py  train_hf_stream.py
ka_mind/: __init__.py
ka_mind/agents/: __init__.py  api_connector_agent.py  code_agent.py  file_agent.py  goal_agent.py  math_agent.py  memory_agent.py  time_agent.py  translator_agent.py  vision_agent.py  web_agent.py
ka_mind/core/: __init__.py  abstractor.py  causal_mapper.py  cognitive_generator.py  composer.py  fact_extractor.py  fluid_composer.py  graph_index.py  graph_memory.py  human_language_engine.py  inference_cache.py  knowledge_atom.py  knowledge_pack.py  memory_ranker.py  neocortex.py  reasoning_engine.py  rule_extractor.py  style_rules.py  temporal_atom.py  temporal_reasoner.py  vector_atom.py  vector_graph.py  world_model.py
ka_mind/framework/: __init__.py  compiler.py  model.py  trainer.py
ka_mind/memory/: __init__.py  optimizer.py
ka_mind/reasoning/: __init__.py  visible_reasoner.py
ka_mind/teacher/: __init__.py  master_teacher.py  super_teacher.py
ka_mind/training/: __init__.py  auto_stream_trainer.py  (+3 more)
models/: chanakya_v1.0.kamind
tests/: __init__.py  test_api_agent.py  test_fixes.py  test_language.py  test_reasoning.py  test_v231.py
